--- a/mmcare-fe/public/index.html
+++ b/mmcare-fe/public/index.html
@@ -27,7 +27,7 @@
     <title>React App</title>
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
   </head>
-  <body style="margin: 0; padding: 0;" >
+  <body style="margin: 0; padding: 0; width: 100%; height: 100vh; " >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
